--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,11 @@ captures/
 # Intellij
 *.iml
 .idea/workspace.xml
+/.idea/libraries
 
 # Keystore files
 *.jks
+
+# other
+.DS_Store
+.externalNativeBuild
