--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,28 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
+#org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+# 提升编译速度
+org.gradle.jvmargs=-Xmx4608M
+org.gradle.parallel=true
+# ndk 使用
+android.useDeprecatedNdk=true
+# Project-wide Gradle settings.
+# 打包名字使用
+SERVICE_VALUE=br_febo
+# 添加ndk支持(按需添加)
+# 信鸽推送
+XG_V2_ACCESS_ID=2100242281
+XG_V2_ACCESS_KEY=A1K59K9RYF4S
+# umeng
+UMENG_CHANNEL_KEY=54ff9b8bfd98c517d80004cc
+UMENG_CHANNEL_VALUE=umeng
+# 高德地图
+MAP_API_KEY=10c387005deb733742697c0cf4e1a96e
+# mob
+MOB_APP_KEY="1111bb3036250"
+MOB_APP_SECRET="a81252eb9ad8720d720dcfa7b47b2fc5"
