--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
                                 UMENG_CHANNEL_VALUE: UMENG_CHANNEL_VALUE,
                                 MAP_API_KEY        : MAP_API_KEY,
                                 SERVICE_VALUE      : SERVICE_VALUE]
-        buildConfigField "String", "SERVER_URL", "\"http://192.168.6.62:8080\""
+        buildConfigField "String", "SERVER_URL", "\"http://192.168.6.85:8080\""
         buildConfigField "String", "UPDATE_CHANNEL", "\"\""
         buildConfigField "String", "MOB_APP_KEY", MOB_APP_KEY
         buildConfigField "String", "MOB_APP_SECRET", MOB_APP_SECRET
@@ -110,7 +110,7 @@ android {
         HUAWEI {
             versionCode 1
             versionName "1.0.0"
-            buildConfigField "String", "SERVER_URL", "\"http://203.156.255.212\""
+            buildConfigField "String", "SERVER_URL", "\"http://192.168.6.85:8080\""
             buildConfigField "String", "UPDATE_CHANNEL", "\"mCsFmAAT5dxnWJH4\""
         }
         QQ {
@@ -127,6 +127,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':br_library')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
     //butterknife
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:design:25.3.1'
